tests/errors/string_to_bool.orus
fn main() {
    let b: bool = "true" as bool
}

